restructuring source files

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 develop = .
 parts = hwp
 	hwp-scripts
+	test
 
 [hwp]
 recipe = zc.recipe.egg
@@ -9,4 +10,8 @@ eggs = pyhwp
 
 [hwp-scripts]
 recipe = zc.recipe.egg:scripts
+eggs = pyhwp
+
+[test]
+recipe = zc.recipe.testrunner
 eggs = pyhwp
