revise buildout structure

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,10 @@
 [buildout]
-develop = .
-parts = hwp
+develop = pyhwp
+parts = pyhwp
 	hwp-scripts
 	test
 
-[hwp]
+[pyhwp]
 recipe = zc.recipe.egg
 eggs = pyhwp
 
