oxt: Makefile의 unopkg 등 패쓰 수정

--- a/oxt/Makefile
+++ b/oxt/Makefile
@@ -1,6 +1,6 @@
 OXTPKG=pyhwp.oxt
-UNOPKG=/home/mete0r/prj/libreoffice/solver/unxlngi6.pro/installation/opt/program/unopkg
-SOFFICE=/home/mete0r/prj/libreoffice/solver/unxlngi6.pro/installation/opt/program/soffice
+UNOPKG=unopkg
+SOFFICE=soffice
 
 SRC=description.xml pyhwp.py Addons.xcu Types.xcu Filter.xcu META-INF/manifest.xml #pythonpath.zip
 
