--- a/oxt/Makefile
+++ b/oxt/Makefile
@@ -2,10 +2,12 @@ OXTPKG=pyhwp.oxt
 UNOPKG=unopkg
 SOFFICE=soffice
 
-SRC=description.xml pyhwp.py Addons.xcu Types.xcu Filter.xcu META-INF/manifest.xml #pythonpath.zip
+SRC=description.xml pyhwp.py Addons.xcu Types.xcu Filter.xcu META-INF/manifest.xml
 
 $(OXTPKG): $(SRC)
-	zip -9 $@ $(SRC)
+	-mkdir pythonpath
+	cd ../pyhwp; PYTHONPATH=../oxt/pythonpath python setup.py install --no-compile --install-lib=../oxt/pythonpath --install-data=../oxt/pythonpath --install-scripts=../oxt/bin --single-version-externally-managed --record=../oxt/pyhwp.egg.record
+	zip -9 -r $@ $(SRC) pythonpath
 
 validate: $(OXTPKG)
 	$(UNOPKG) validate -v $(OXTPKG)
@@ -17,10 +19,6 @@ uninstall:
 	$(UNOPKG) remove -f $(OXTPKG)
 
 reinstall: uninstall install
-
-pythonpath.zip: utils.py
-	zip -0 pythonpath.zip utils.py
-	#cd ../pyhwp; zip -0 -r ../oxt/pythonpath.zip hwp5
 
 runserver:
 	PYTHONPATH=../pyhwp soffice "-accept=socket,host=localhost,port=2002;urp;"
