oxt: 패키징 정보 셋업
- 패키지 id: pyhwp.oxt
- 버젼: 0.0
- 라이센스: AGPLv3
- 오픈/Libre 오피스 3.3 이상
- publisher: mete0r (http://github.com/mete0r/pyhwp)
- xsltproc 필요

--- a/oxt/Makefile
+++ b/oxt/Makefile
@@ -2,7 +2,7 @@ OXTPKG=pyhwp.oxt
 UNOPKG=unopkg
 SOFFICE=soffice
 
-SRC=description.xml pyhwp.py Addons.xcu Types.xcu Filter.xcu META-INF/manifest.xml
+SRC=description.xml pyhwp.py Types.xcu Filter.xcu META-INF/manifest.xml registration/COPYING.txt description/*.txt
 
 $(OXTPKG): $(SRC)
 	-mkdir pythonpath
