setup.py에 test_suite 추가 및 테스트 fixture 디렉토리 조정
- setup.py에 test_suite 추가 : python setup.py test
- 테스트 파일들에 fixtures 디렉토리 위치 조정
- pyhwp/fixtures를 samples에 심볼릭 연결

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,3 +15,5 @@ eggs = pyhwp
 [test]
 recipe = zc.recipe.testrunner
 eggs = pyhwp
+initialization = os.unlink('fixtures')
+		 os.symlink('../../../samples', 'fixtures')
