bin/test 실행 시 --auto-color --auto-progress를 기본으로

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,3 +17,4 @@ recipe = zc.recipe.testrunner
 eggs = pyhwp
 initialization = os.unlink('fixtures')
 		 os.symlink('../../../samples', 'fixtures')
+defaults = ['--auto-color', '--auto-progress']
