bin/test 초기화 정정
working directory에 fixtures/ 디렉토리 심볼릭 링크가 없는 경우 무시하고 진행

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,6 +15,7 @@ eggs = pyhwp
 [test]
 recipe = zc.recipe.testrunner
 eggs = pyhwp
-initialization = os.unlink('fixtures')
-		 os.symlink('../../../samples', 'fixtures')
+initialization = try: os.unlink('fixtures')
+		 except OSError: pass
+		 os.symlink('${buildout:directory}/samples', 'fixtures')
 defaults = ['--auto-color', '--auto-progress']
