--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ develop = pyhwp
 parts = pyhwp
 	hwp-scripts
 	test
+	pylint
 
 [pyhwp]
 recipe = zc.recipe.egg
@@ -19,3 +20,10 @@ initialization = try: os.unlink('fixtures')
 		 except OSError: pass
 		 os.symlink('${buildout:directory}/samples', 'fixtures')
 defaults = ['--auto-color', '--auto-progress']
+
+[pylint]
+recipe = zc.recipe.egg
+eggs = pylint
+	pyhwp
+entry-points = pylint=pylint.lint:Run
+arguments = sys.argv[1:]
