--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-#[submodule "wiki"]
-#	path = wiki
-#	url = git@github.com:mete0r/pyhwp.wiki.git
+[submodule "wiki"]
+	path = wiki
+	url = git@github.com:mete0r/pyhwp.wiki.git
