zc.recipe.testrunner대신 collective.xmltestreport 사용
- JUnit 테스트 결과 보고 형식(XML)과 호환
- jenkins에서 사용하기 위해

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,12 +14,12 @@ recipe = zc.recipe.egg:scripts
 eggs = pyhwp
 
 [test]
-recipe = zc.recipe.testrunner
+recipe = collective.xmltestreport
 eggs = pyhwp
 initialization = try: os.unlink('fixtures')
 		 except OSError: pass
 		 os.symlink('${buildout:directory}/samples', 'fixtures')
-defaults = ['--auto-color', '--auto-progress']
+defaults = ['--auto-color', '--auto-progress', '--xml']
 
 [pylint]
 recipe = zc.recipe.egg
