setup.py에 test에 필요한 패키지를 extras_require로 추가

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,7 +15,7 @@ eggs = pyhwp
 
 [test]
 recipe = collective.xmltestreport
-eggs = pyhwp
+eggs = pyhwp [test]
 initialization = try: os.unlink('fixtures')
 		 except OSError: pass
 		 os.symlink('${buildout:directory}/samples', 'fixtures')
