--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 develop = pyhwp
 parts = pyhwp
 	hwp-scripts
+	sphinx
 	test
 	pylint
 
@@ -27,3 +28,9 @@ eggs = pylint
 	pyhwp
 entry-points = pylint=pylint.lint:Run
 arguments = sys.argv[1:]
+
+[sphinx]
+recipe = collective.recipe.sphinxbuilder
+source = ${buildout:directory}/doc
+build = ${buildout:directory}/doc/_build
+extra-paths = ${buildout:directory}/pyhwp
