--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,9 @@ develop = pyhwp
 parts = pyhwp
 	hwp-scripts
 	sphinx
+	coverage
 	test
+	test-coverage
 	pylint
 
 [pyhwp]
@@ -21,6 +23,17 @@ initialization = try: os.unlink('fixtures')
 		 except OSError: pass
 		 os.symlink('${buildout:directory}/samples', 'fixtures')
 defaults = ['--auto-color', '--auto-progress', '--xml']
+
+[test-coverage]
+recipe = collective.recipe.template
+input = ${buildout:directory}/bin/test-coverage.template
+output = ${buildout:directory}/bin/test-coverage
+mode = 755
+
+[coverage]
+recipe = zc.recipe.egg
+eggs = pyhwp [test]
+	coverage
 
 [pylint]
 recipe = zc.recipe.egg
