--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ parts = pyhwp
 	test
 	test-coverage
 	pylint
+	oxt-pythonpath
 
 [pyhwp]
 recipe = zc.recipe.egg
@@ -47,3 +48,8 @@ recipe = collective.recipe.sphinxbuilder
 source = ${buildout:directory}/doc
 build = ${buildout:directory}/doc/_build
 extra-paths = ${buildout:directory}/pyhwp
+
+[oxt-pythonpath]
+recipe = collective.recipe.omelette
+eggs = pyhwp
+location = oxt/pythonpath
