buildout: unzip all eggs for omelette

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,9 @@ parts = pyhwp
 	pylint
 	oxt-pythonpath
 
+# currently omelette doesn't support zipped eggs
+unzip = true
+
 [pyhwp]
 recipe = zc.recipe.egg
 eggs = pyhwp
