fix misuse of zc.recipe.egg in buildout
[pylint] 파트가 pyhwp의 콘솔 스크립트들을 잘못 생성하고 있었음
(arguments 문제)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,7 @@
 [buildout]
 develop = pyhwp
 parts = pyhwp
-	hwp-scripts
 	sphinx
-	coverage
 	test
 	test-coverage
 	pylint
@@ -15,10 +13,8 @@ unzip = true
 [pyhwp]
 recipe = zc.recipe.egg
 eggs = pyhwp
-
-[hwp-scripts]
-recipe = zc.recipe.egg:scripts
-eggs = pyhwp
+       coverage
+interpreter = console
 
 [test]
 recipe = collective.xmltestreport
@@ -34,17 +30,12 @@ input = ${buildout:directory}/bin/test-coverage.template
 output = ${buildout:directory}/bin/test-coverage
 mode = 755
 
-[coverage]
-recipe = zc.recipe.egg
-eggs = pyhwp [test]
-	coverage
-
 [pylint]
 recipe = zc.recipe.egg
 eggs = pylint
-	pyhwp
 entry-points = pylint=pylint.lint:Run
 arguments = sys.argv[1:]
+extra-paths = ${buildout:directory}/pyhwp
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
