jingodf: ODF Schema validation
fix #35

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
 develop = pyhwp
+          jingodf
 parts = pyhwp
 	sphinx
 	test
@@ -13,6 +14,7 @@ unzip = true
 [pyhwp]
 recipe = zc.recipe.egg
 eggs = pyhwp
+       jingodf
        coverage
 interpreter = console
 
