bin/upload: pypi upload automation script

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ parts = pyhwp
 	test-coverage
 	pylint
 	oxt-pythonpath
+	upload
 
 # currently omelette doesn't support zipped eggs
 unzip = true
@@ -49,3 +50,9 @@ extra-paths = ${buildout:directory}/pyhwp
 recipe = collective.recipe.omelette
 eggs = pyhwp
 location = oxt/pythonpath
+
+[upload]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/upload
+output = ${buildout:directory}/bin/upload
+mode = 755
