--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@ parts = pyhwp
 	pylint
 	oxt-pythonpath
 	upload
+	test-for-bisect
 
 # currently omelette doesn't support zipped eggs
 unzip = true
@@ -55,4 +56,10 @@ location = oxt/pythonpath
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/upload
 output = ${buildout:directory}/bin/upload
+mode = 755
+
+[test-for-bisect]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/test-for-bisect
+output = ${buildout:directory}/bin/test-for-bisect
 mode = 755
