--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ parts = pyhwp
 	test
 	test-coverage
 	pylint
+	pep8
 	oxt-pythonpath
 	upload
 	test-for-bisect
@@ -40,6 +41,10 @@ eggs = pylint
 entry-points = pylint=pylint.lint:Run
 arguments = sys.argv[1:]
 extra-paths = ${buildout:directory}/pyhwp
+
+[pep8]
+recipe = zc.recipe.egg
+eggs = pep8
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
