move test-coverage.template to misc

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -31,7 +31,7 @@ defaults = ['--auto-color', '--auto-progress', '--xml']
 
 [test-coverage]
 recipe = collective.recipe.template
-input = ${buildout:directory}/bin/test-coverage.template
+input = ${buildout:directory}/misc/test-coverage
 output = ${buildout:directory}/bin/test-coverage
 mode = 755
 
