OXT testbed: test runner in libreoffice
fix #31

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,7 @@ parts = pyhwp
 	oxt-pythonpath
 	upload
 	test-for-bisect
+	test-oxt
 
 # currently omelette doesn't support zipped eggs
 unzip = true
@@ -67,4 +68,10 @@ mode = 755
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-for-bisect
 output = ${buildout:directory}/bin/test-for-bisect
+mode = 755
+
+[test-oxt]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/test-oxt.py
+output = ${buildout:directory}/bin/test-oxt
 mode = 755
