--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,7 @@ parts = pyhwp
 	upload
 	test-for-bisect
 	test-oxt
+	tox
 
 # currently omelette doesn't support zipped eggs
 unzip = true
@@ -75,3 +76,7 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-oxt.py
 output = ${buildout:directory}/bin/test-oxt
 mode = 755
+
+[tox]
+recipe = zc.recipe.egg
+eggs = tox
