tox.ini: add py27 environment

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 toxworkdir={toxinidir}/parts/tox
 setupdir={toxinidir}
-envlist = py25,py26
+envlist = py25,py26,py27
 
 [testenv]
 deps=lxml
