--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 develop = .
           jingodf
+          oxt-tool
 parts = pyhwp
 	sphinx
 	test
@@ -8,6 +9,7 @@ parts = pyhwp
 	pylint
 	pep8
 	oxt-pythonpath
+	oxt-tool
 	upload
 	test-for-bisect
 	test-oxt
@@ -75,6 +77,10 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-oxt.py
 output = ${buildout:directory}/bin/test-oxt
 mode = 755
+
+[oxt-tool]
+recipe = zc.recipe.egg
+eggs = oxt-tool
 
 [tox]
 recipe = zc.recipe.egg
