--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,12 +2,14 @@
 develop = .
           jingodf
           oxt-tool
+          oxt/helper
 parts = pyhwp
 	sphinx
 	test
 	test-coverage
 	pylint
 	pep8
+	oxthelper
 	oxt-pythonpath
 	oxt-tool
 	upload
@@ -58,6 +60,7 @@ build = ${buildout:directory}/doc/_build
 [oxt-pythonpath]
 recipe = collective.recipe.omelette
 eggs = pyhwp
+       oxthelper
 location = oxt/pythonpath
 
 [upload]
@@ -81,6 +84,10 @@ mode = 755
 [oxt-tool]
 recipe = zc.recipe.egg
 eggs = oxt-tool
+
+[oxthelper]
+recipe = zc.recipe.egg
+eggs = oxthelper
 
 [tox]
 recipe = zc.recipe.egg
