oxt-tool to oxt/tool

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 develop = .
           jingodf
-          oxt-tool
+          oxt/tool
           oxt/helper
 parts = pyhwp
 	sphinx
@@ -10,8 +10,8 @@ parts = pyhwp
 	pylint
 	pep8
 	oxthelper
+	oxttool
 	oxt-pythonpath
-	oxt-tool
 	upload
 	test-for-bisect
 	test-oxt
@@ -81,13 +81,14 @@ input = ${buildout:directory}/misc/test-oxt.py
 output = ${buildout:directory}/bin/test-oxt
 mode = 755
 
-[oxt-tool]
-recipe = zc.recipe.egg
-eggs = oxt-tool
-
 [oxthelper]
 recipe = zc.recipe.egg
 eggs = oxthelper
+
+[oxttool]
+recipe = zc.recipe.egg
+eggs = oxttool
+       oxthelper
 
 [tox]
 recipe = zc.recipe.egg
