--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 develop = .
           jingodf
+          unokit
           oxt/tool
           oxt/helper
 parts = pyhwp
@@ -14,6 +15,7 @@ parts = pyhwp
 	oxt-pythonpath
 	upload
 	test-for-bisect
+	test-unokit
 	test-oxt
 	tox
 
@@ -84,6 +86,11 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-oxt.py
 output = ${buildout:directory}/bin/test-oxt
 mode = 755
+
+[test-unokit]
+recipe = collective.xmltestreport
+eggs = unokit
+defaults = ['--auto-color', '--auto-progress', '--xml']
 
 [oxthelper]
 recipe = zc.recipe.egg
