OXT: use unokit.Base and component_context

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -66,6 +66,7 @@ build = ${buildout:directory}/doc/_build
 [oxt-pythonpath]
 recipe = collective.recipe.omelette
 eggs = pyhwp
+       unokit
        oxthelper
 location = oxt/pythonpath
 
