OXT: refactor to pyhwp_uno

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,20 +3,20 @@ develop = .
           jingodf
           unokit
           oxt/tool
-          oxt/helper
+          pyhwp_uno
 parts = pyhwp
 	sphinx
 	test
 	test-coverage
 	pylint
 	pep8
-	oxthelper
 	oxttool
 	oxt-pythonpath
 	upload
 	test-for-bisect
 	test-unokit
 	test-oxt
+        test-in-lo
 	tox
 
 # currently omelette doesn't support zipped eggs
@@ -65,9 +65,7 @@ build = ${buildout:directory}/doc/_build
 
 [oxt-pythonpath]
 recipe = collective.recipe.omelette
-eggs = pyhwp
-       unokit
-       oxthelper
+eggs = pyhwp_uno
 location = oxt/pythonpath
 
 [upload]
@@ -82,10 +80,10 @@ input = ${buildout:directory}/misc/test-for-bisect
 output = ${buildout:directory}/bin/test-for-bisect
 mode = 755
 
-[test-oxt]
+[test-in-lo]
 recipe = collective.recipe.template
-input = ${buildout:directory}/misc/test-oxt.py
-output = ${buildout:directory}/bin/test-oxt
+input = ${buildout:directory}/misc/test-in-lo.py
+output = ${buildout:directory}/bin/test-in-lo
 mode = 755
 
 [test-unokit]
@@ -93,14 +91,17 @@ recipe = collective.xmltestreport
 eggs = unokit
 defaults = ['--auto-color', '--auto-progress', '--xml']
 
-[oxthelper]
-recipe = zc.recipe.egg
-eggs = oxthelper
+[test-oxt]
+recipe = collective.xmltestreport
+eggs = pyhwp_uno
+defaults = ['--auto-color', '--auto-progress', '--xml']
+initialization = try: os.unlink('fixtures')
+		 except OSError: pass
+		 os.symlink('${buildout:directory}/samples', 'fixtures')
 
 [oxttool]
 recipe = zc.recipe.egg
 eggs = oxttool
-       oxthelper
 
 [tox]
 recipe = zc.recipe.egg
