pin collective.xmltestreport version to 1.2.6
1.2.8 has problem with coverage run

(can't import collective.xmltestreport.runner)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,6 +19,10 @@ parts = pyhwp
 
 # currently omelette doesn't support zipped eggs
 unzip = true
+versions = versions
+
+[versions]
+collective.xmltestreport = 1.2.6
 
 [pyhwp]
 recipe = zc.recipe.egg
