OXT: change package name to hwp5.oxt
- Filter/Type name from writer_pyhwp_HWPv5 to hwp5
- pyhwp.Detector/Importer to hwp5.Detector/Importer
- pyhwp.py to components.py

--- a/oxt/Makefile
+++ b/oxt/Makefile
@@ -1,8 +1,8 @@
-OXTPKG=pyhwp.oxt
+OXTPKG=hwp5.oxt
 UNOPKG=unopkg
 SOFFICE=soffice
 
-SRC=description.xml pyhwp.py Types.xcu Filter.xcu META-INF/manifest.xml registration/COPYING.txt description/*.txt
+SRC=description.xml components.py Types.xcu Filter.xcu META-INF/manifest.xml registration/COPYING.txt description/*.txt
 
 $(OXTPKG): $(SRC)
 	zip -9 -r $@ $(SRC) pythonpath
