docs: bin/docs-update-po
see #77

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ develop = .
           oxt/tool
           pyhwp_uno
 parts = pyhwp
+        docs-update-po
 	test
 	test-coverage
 	pylint
@@ -32,6 +33,12 @@ eggs = pyhwp
        coverage
        sphinx
 interpreter = console
+
+[docs-update-po]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/docs-update-po
+output = ${buildout:directory}/bin/docs-update-po
+mode = 755
 
 [test]
 recipe = collective.xmltestreport
