docs: bin/docs-build

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ develop = .
           pyhwp_uno
 parts = pyhwp
         docs-update-po
+	docs-build
 	test
 	test-coverage
 	pylint
@@ -38,6 +39,12 @@ interpreter = console
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/docs-update-po
 output = ${buildout:directory}/bin/docs-update-po
+mode = 755
+
+[docs-build]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/docs-build
+output = ${buildout:directory}/bin/docs-build
 mode = 755
 
 [test]
