docs: bin/docs-upload

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ develop = .
 parts = pyhwp
         docs-update-po
 	docs-build
+	docs-upload
 	test
 	test-coverage
 	pylint
@@ -45,6 +46,12 @@ mode = 755
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/docs-build
 output = ${buildout:directory}/bin/docs-build
+mode = 755
+
+[docs-upload]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/docs-upload
+output = ${buildout:directory}/bin/docs-upload
 mode = 755
 
 [test]
