--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
 develop = .
+          xunit
           jingodf
           unokit
           oxt.tool
@@ -18,6 +19,7 @@ parts = pyhwp
 	test-sdist
 	jython25
 	java-poi
+        xunit
 	pylint
 	pep8
 	oxt-tool
@@ -119,6 +121,10 @@ url = http://apache.mirror.cdnetworks.com/poi/release/bin/poi-bin-3.8-20120326.t
 md5sum = b9278ad8aed53eeb672fec66c764e371
 destination = ${buildout:directory}/downloads
 download-only = true
+
+[xunit]
+recipe = zc.recipe.egg
+eggs = xunit
 
 [pylint]
 recipe = zc.recipe.egg
