sdist: add missing xsl/odt/* files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include pyhwp/hwp5/xsl/*.xsl
+include pyhwp/hwp5/xsl/odt/*
 include pyhwp/hwp5/odf-relaxng/OpenDocument-v1.2-os-*.rng
 include versioneer.py
