test-cli: test command line interface

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,7 @@ parts = pyhwp
 	docs-upload
 	test
 	test-coverage
+	test-cli
 	pylint
 	pep8
 	oxttool
@@ -66,6 +67,12 @@ defaults = ['--auto-color', '--auto-progress', '--xml']
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-coverage
 output = ${buildout:directory}/bin/test-coverage
+mode = 755
+
+[test-cli]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/test-cli.in
+output = ${buildout:directory}/bin/test-cli
 mode = 755
 
 [pylint]
