test-sdist: test integrity of generated src pkgs

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,7 @@ parts = pyhwp
 	test
 	test-coverage
 	test-cli
+	test-sdist
 	pylint
 	pep8
 	oxttool
@@ -73,6 +74,12 @@ mode = 755
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-cli.in
 output = ${buildout:directory}/bin/test-cli
+mode = 755
+
+[test-sdist]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/test-sdist.in
+output = ${buildout:directory}/bin/test-sdist
 mode = 755
 
 [pylint]
