buildout: oxt-build
oxt/Makefile uses bin/oxt-build

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,6 +16,7 @@ parts = pyhwp
 	pep8
 	oxttool
 	oxt-pythonpath
+	oxt-build
 	upload
 	test-for-bisect
 	test-unokit
@@ -94,6 +95,12 @@ eggs = pep8
 recipe = collective.recipe.omelette
 eggs = pyhwp_uno
 location = oxt/pythonpath
+
+[oxt-build]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/oxt-build.in
+output = ${buildout:directory}/bin/oxt-build
+mode = 755
 
 [upload]
 recipe = collective.recipe.template
