buildout: Jython 2.5.3 in parts/jython25
see #94

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,6 +14,7 @@ parts = pyhwp
 	test-cli
 	test-sdist
 	jython-jre
+	jython25
 	pylint
 	pep8
 	oxttool
@@ -85,6 +86,11 @@ mode = 755
 [jython-jre]
 recipe = recipe.jre
 location = ${buildout:parts-directory}/jython-jre
+
+[jython25]
+recipe = sk.recipe.jython
+url = http://search.maven.org/remotecontent?filepath=org/python/jython-installer/2.5.3/jython-installer-2.5.3.jar
+java = ${jython-jre:location}/java
 
 [pylint]
 recipe = zc.recipe.egg
