tox: add 'jy25' test environment
close #94

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 toxworkdir={toxinidir}/parts/tox
 setupdir={toxinidir}
-envlist = py25,py26,py27
+envlist = py25,py26,py27,jy25
 
 [testenv]
 deps=lxml
@@ -9,3 +9,7 @@ deps=lxml
 commands=
 	discover -s {toxinidir}/pyhwp
 changedir={toxinidir}/parts/test
+
+[testenv:jy25]
+basepython= {toxinidir}/parts/jython25/jython
+deps=discover
