recipe.jre: discover JRE and install

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@ develop = .
           unokit
           oxt/tool
           pyhwp_uno
+          recipe.jre
 parts = pyhwp
         docs-update-po
 	docs-build
