buildout: jython-jre
see #94

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,6 +13,7 @@ parts = pyhwp
 	test-coverage
 	test-cli
 	test-sdist
+	jython-jre
 	pylint
 	pep8
 	oxttool
@@ -80,6 +81,10 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-sdist.in
 output = ${buildout:directory}/bin/test-sdist
 mode = 755
+
+[jython-jre]
+recipe = recipe.jre
+location = ${buildout:parts-directory}/jython-jre
 
 [pylint]
 recipe = zc.recipe.egg
