--- a/buildout.cfg
+++ b/buildout.cfg
@@ -89,8 +89,16 @@ location = ${buildout:parts-directory}/jython-jre
 
 [jython25]
 recipe = sk.recipe.jython
-url = http://search.maven.org/remotecontent?filepath=org/python/jython-installer/2.5.3/jython-installer-2.5.3.jar
+url = ${jython25-installer:destination}/${jython25-installer:filename}
 java = ${jython-jre:location}/java
+
+[jython25-installer]
+recipe = hexagonit.recipe.download
+url = http://search.maven.org/remotecontent?filepath=org/python/jython-installer/2.5.3/jython-installer-2.5.3.jar
+url = downloads/jython-installer-2.5.3.jar
+download-only = true
+destination = ${buildout:parts-directory}/jython25-installer
+filename = jython-installer-2.5.3.jar
 
 [pylint]
 recipe = zc.recipe.egg
