buildout: jython installer into downloads/

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -89,14 +89,14 @@ location = ${buildout:parts-directory}/jython-jre
 
 [jython25]
 recipe = sk.recipe.jython
-url = ${jython25-installer:destination}/${jython25-installer:filename}
+url = ${jython25-download:destination}/${jython25-download:filename}
 java = ${jython-jre:location}/java
 
-[jython25-installer]
+[jython25-download]
 recipe = hexagonit.recipe.download
 url = http://search.maven.org/remotecontent?filepath=org/python/jython-installer/2.5.3/jython-installer-2.5.3.jar
 download-only = true
-destination = ${buildout:parts-directory}/jython25-installer
+destination = ${buildout:directory}/downloads
 filename = jython-installer-2.5.3.jar
 
 [pylint]
