recipe.jre: generate the script in {location}/bin

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -90,7 +90,7 @@ location = ${buildout:parts-directory}/jython-jre
 [jython25]
 recipe = sk.recipe.jython
 url = ${jython25-download:destination}/${jython25-download:filename}
-java = ${jython-jre:location}/java
+java = ${jython-jre:location}/bin/java
 
 [jython25-download]
 recipe = hexagonit.recipe.download
