buildout: part 'jre' (renamed from 'jython-jre')

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,7 +13,6 @@ parts = pyhwp
 	test-coverage
 	test-cli
 	test-sdist
-	jython-jre
 	jython25
 	pylint
 	pep8
@@ -83,13 +82,13 @@ input = ${buildout:directory}/misc/test-sdist.in
 output = ${buildout:directory}/bin/test-sdist
 mode = 755
 
-[jython-jre]
+[jre]
 recipe = recipe.jre
 
 [jython25]
 recipe = sk.recipe.jython
 url = ${jython25-download:destination}/${jython25-download:filename}
-java = ${jython-jre:location}/bin/java
+java = ${jre:location}/bin/java
 
 [jython25-download]
 recipe = hexagonit.recipe.download
