discover.jre: renamed from recipe.jre

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ develop = .
           unokit
           oxt/tool
           pyhwp_uno
-          recipe.jre
+          discover.jre
 parts = pyhwp
         docs-update-po
 	docs-build
@@ -83,7 +83,7 @@ output = ${buildout:directory}/bin/test-sdist
 mode = 755
 
 [jre]
-recipe = recipe.jre
+recipe = discover.jre
 
 [jython25]
 recipe = sk.recipe.jython
