buildout: develop 'discover.lo'
close #95

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ develop = .
           oxt/tool
           pyhwp_uno
           discover.jre
+          discover.lo
           install.jython
 parts = pyhwp
         docs-update-po
@@ -111,6 +112,11 @@ extra-paths = ${buildout:directory}/pyhwp
 [pep8]
 recipe = zc.recipe.egg
 eggs = pep8
+
+[lo]
+recipe = discover.lo
+search-in-wellknown-places = true
+search-in-path = true
 
 [oxt-pythonpath]
 recipe = collective.recipe.omelette
