--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 develop = .
           jingodf
           unokit
-          oxt/tool
+          oxt.tool
           pyhwp_uno
           discover.jre
           discover.lo
@@ -19,9 +19,12 @@ parts = pyhwp
 	jython25
 	pylint
 	pep8
-	oxttool
+	oxt-tool
+	oxt-console
+	oxt-test
 	oxt-pythonpath
 	oxt-build
+	oxt-install
 	upload
 	test-for-bisect
 	test-unokit
@@ -124,11 +127,37 @@ recipe = collective.recipe.omelette
 eggs = pyhwp_uno
 location = oxt/pythonpath
 
+[oxt-tool]
+recipe = zc.recipe.egg
+eggs = oxt.tool
+
+[oxt-console]
+recipe = oxt.tool:console
+python = ${lo:uno_python}
+soffice = ${lo:soffice}
+
+[oxt-test]
+recipe = oxt.tool:test
+python = ${lo:uno_python}
+soffice = ${lo:soffice}
+start_dir=${buildout:directory}/pyhwp
+extra_path=${oxt-test-eggs:egg-path}
+logging=hwp5: level=warning
+
+[oxt-test-eggs]
+recipe = egg.path
+eggs = pyhwp
+       hypua2jamo
+
 [oxt-build]
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/oxt-build.in
 output = ${buildout:directory}/bin/oxt-build
 mode = 755
+
+[oxt-install]
+recipe = oxt.tool:installer
+unopkg = ${lo:unopkg}
 
 [upload]
 recipe = collective.recipe.template
@@ -160,10 +189,6 @@ defaults = ['--auto-color', '--auto-progress', '--xml']
 initialization = try: os.unlink('fixtures')
 		 except OSError: pass
 		 os.symlink('${buildout:directory}/samples', 'fixtures')
-
-[oxttool]
-recipe = zc.recipe.egg
-eggs = oxttool
 
 [tox]
 recipe = zc.recipe.egg
