discover.jre: rewrite discovery mechanism

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -84,11 +84,14 @@ mode = 755
 
 [jre]
 recipe = discover.jre
+search-in-environ-var = true
+search-in-wellknown-places = true
+search-in-path = true
 
 [jython25]
 recipe = sk.recipe.jython
 url = ${jython25-download:destination}/${jython25-download:filename}
-java = ${jre:location}/bin/java
+java = ${jre:java}
 
 [jython25-download]
 recipe = hexagonit.recipe.download
