buildout: develop 'install.jython'

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ develop = .
           oxt/tool
           pyhwp_uno
           discover.jre
+          install.jython
 parts = pyhwp
         docs-update-po
 	docs-build
@@ -89,7 +90,7 @@ search-in-wellknown-places = true
 search-in-path = true
 
 [jython25]
-recipe = sk.recipe.jython
+recipe = install.jython
 url = ${jython25-download:destination}/${jython25-download:filename}
 java = ${jre:java}
 
