buildout: part 'tox-ini'

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -31,6 +31,7 @@ parts = pyhwp
 	test-oxt
         test-in-lo
 	tox
+	tox-ini
 
 # currently omelette doesn't support zipped eggs
 unzip = true
@@ -193,3 +194,9 @@ initialization = try: os.unlink('fixtures')
 [tox]
 recipe = zc.recipe.egg
 eggs = tox
+
+[tox-ini]
+recipe = collective.recipe.template
+input = ${buildout:directory}/tox.ini.in
+output = ${buildout:directory}/tox.ini
+mode = 755
