--- a/tox.ini.in
+++ b/tox.ini.in
@@ -1,7 +1,7 @@
 [tox]
 toxworkdir={toxinidir}/parts/tox
 setupdir={toxinidir}
-envlist = py25,py26,py27,jy25
+envlist = py25,py26,py27,jy25,lo
 
 [testenv]
 deps=lxml
@@ -12,4 +12,13 @@ changedir={toxinidir}/parts/test
 
 [testenv:jy25]
 basepython=${jython25:executable}
+deps=discover
+
+[testenv:lo]
+setenv=PATH={env:PATH}${lo:pathsep}${lo:program}${lo:pathsep}${lo:ure}/bin
+       PYTHONPATH=${lo:uno_pythonpath}
+basepython=${lo:uno_python}
+commands=
+	python -c 'import uno, unohelper'
+	{toxinidir}/bin/oxt-test
 deps=discover
