--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ develop = .
           discover.jre
           discover.lo
           install.jython
+          egg.path
 parts = pyhwp
         docs-update-po
 	docs-build
