java-poi: org.apache.poi

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,7 @@ parts = pyhwp
 	test-cli
 	test-sdist
 	jython25
+	java-poi
 	pylint
 	pep8
 	oxt-tool
@@ -106,6 +107,19 @@ url = http://search.maven.org/remotecontent?filepath=org/python/jython-installer
 download-only = true
 destination = ${buildout:directory}/downloads
 filename = jython-installer-2.5.3.jar
+
+[java-poi]
+recipe = hexagonit.recipe.download
+url = ${java-poi-download:destination}/poi-bin-3.8-20120326.tar.gz
+md5sum = ${java-poi-download:md5sum}
+strip-top-level-dir = true
+
+[java-poi-download]
+recipe = hexagonit.recipe.download
+url = http://apache.mirror.cdnetworks.com/poi/release/bin/poi-bin-3.8-20120326.tar.gz
+md5sum = b9278ad8aed53eeb672fec66c764e371
+destination = ${buildout:directory}/downloads
+download-only = true
 
 [pylint]
 recipe = zc.recipe.egg
