--- a/tox.ini.in
+++ b/tox.ini.in
@@ -5,18 +5,18 @@ envlist = py25,py26,py27,jy25,lo
 
 [testenv]
 deps=lxml
-     discover
+     nose
 commands=
-	discover -s {toxinidir}/pyhwp
+	nosetests . {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf
 changedir={toxinidir}/parts/test
 
 [testenv:jy25]
 setenv=JYTHONPATH=${java-poi:location}/poi-3.8-20120326.jar
 basepython=${jython25:executable}
-deps=discover
+deps=nose
 commands =
 	jython -c 'from org.apache.poi.poifs.filesystem import POIFSFileSystem'
-	discover -s {toxinidir}/pyhwp
+	nosetests {toxinidir}/parts/test {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf
 
 [testenv:lo]
 setenv=PATH={env:PATH}${lo:pathsep}${lo:program}${lo:pathsep}${lo:ure}/bin
