--- a/tox.ini.in
+++ b/tox.ini.in
@@ -7,8 +7,8 @@ envlist = py25,py26,py27,jy25,lo
 deps=lxml
      nose
 commands=
-	nosetests . {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf
-changedir={toxinidir}/parts/test
+	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf
+changedir={envtmpdir}
 
 [testenv:jy25]
 setenv=JYTHONPATH=${java-poi:location}/poi-3.8-20120326.jar
@@ -16,7 +16,7 @@ basepython=${jython25:executable}
 deps=nose
 commands =
 	jython -c 'from org.apache.poi.poifs.filesystem import POIFSFileSystem'
-	nosetests {toxinidir}/parts/test {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf
+	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf
 
 [testenv:lo]
 setenv=PATH={env:PATH}${lo:pathsep}${lo:program}${lo:pathsep}${lo:ure}/bin
