--- a/tox.ini.in
+++ b/tox.ini.in
@@ -4,9 +4,9 @@ setupdir={toxinidir}
 envlist = py25,py26,py27,jy25,lo
 
 [testenv]
-deps=lxml
-     nose
+deps=nose
 commands=
+	{toxinidir}/bin/console {toxinidir}/misc/copylxml.py {envtmpdir}
 	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf
 changedir={envtmpdir}
 
