oxt.tool: test runner backend configures logging with file

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -157,7 +157,7 @@ python = ${lo:uno_python}
 soffice = ${lo:soffice}
 start_dir=${buildout:directory}/pyhwp
 extra_path=${oxt-test-eggs:egg-path}
-logging=hwp5: level=warning
+logconf_path=${buildout:directory}/logging-nosetests.conf
 
 [oxt-test-eggs]
 recipe = egg.path
