oxt.tool: starts_dir -> discover

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -155,7 +155,7 @@ soffice = ${lo:soffice}
 recipe = oxt.tool:test
 python = ${lo:uno_python}
 soffice = ${lo:soffice}
-start_dir=${buildout:directory}/pyhwp
+discover = ${buildout:directory}/pyhwp
 extra_path=${oxt-test-eggs:egg-path}
 logconf_path=${buildout:directory}/logging-nosetests.conf
 
