buildout: include pyhwp_uno in oxt-test

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -156,6 +156,7 @@ recipe = oxt.tool:test
 python = ${lo:uno_python}
 soffice = ${lo:soffice}
 discover = ${buildout:directory}/pyhwp
+	   ${buildout:directory}/pyhwp_uno
 extra_path=${oxt-test-eggs:egg-path}
 logconf_path=${buildout:directory}/logging-nosetests.conf
 
@@ -163,6 +164,8 @@ logconf_path=${buildout:directory}/logging-nosetests.conf
 recipe = egg.path
 eggs = pyhwp
        hypua2jamo
+       pyhwp-uno
+       unokit
 
 [oxt-build]
 recipe = collective.recipe.template
