buildout: console-in-lo

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,6 +26,7 @@ parts = pyhwp
 	oxt-pythonpath
 	oxt-build
 	oxt-install
+	console-in-lo
 	upload
 	test-for-bisect
 	test-unokit
@@ -176,6 +177,12 @@ mode = 755
 [oxt-install]
 recipe = oxt.tool:installer
 unopkg = ${lo:unopkg}
+
+[console-in-lo]
+recipe = oxt.tool:console
+python = ${lo:uno_python}
+soffice = ${lo:soffice}
+in_proc = true
 
 [upload]
 recipe = collective.recipe.template
