pyhwp-xunits: prepare

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 develop = .
           xunit
+          pyhwp-xunits
           jingodf
           unokit
           oxt.tool
@@ -17,6 +18,7 @@ parts = pyhwp
 	test-coverage
 	test-cli
 	test-sdist
+	test-xunits
 	jython25
 	java-poi
         xunit
@@ -90,6 +92,10 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-sdist.in
 output = ${buildout:directory}/bin/test-sdist
 mode = 755
+
+[test-xunits]
+recipe = zc.recipe.egg
+eggs = pyhwp-xunits
 
 [jre]
 recipe = discover.jre
