pyhwp: remove lxml-dependency from test

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -72,7 +72,7 @@ mode = 755
 
 [test]
 recipe = collective.xmltestreport
-eggs = pyhwp [test]
+eggs = pyhwp
 defaults = ['--auto-color', '--auto-progress', '--xml']
 
 [test-coverage]
