oxt-test: add unokit tests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -158,6 +158,7 @@ python = ${lo:uno_python}
 soffice = ${lo:soffice}
 discover = ${buildout:directory}/pyhwp
 	   ${buildout:directory}/pyhwp_uno
+           ${buildout:directory}/unokit
 extra_path=${oxt-test-eggs:egg-path}
 logconf_path=${buildout:directory}/logging-nosetests.conf
 
