misc/gpl: source copyright helper

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,7 @@ develop = .
           discover.lo
           install.jython
           egg.path
+          misc/gpl
 parts = pyhwp
         docs-update-po
 	docs-build
@@ -50,6 +51,7 @@ eggs = pyhwp
        jingodf
        coverage
        sphinx
+       gpl
 interpreter = console
 
 [docs-update-po]
