tox.ini: nosetests --with-xunit

--- a/tox.ini.in
+++ b/tox.ini.in
@@ -8,7 +8,7 @@ deps=nose
 commands=
 	{toxinidir}/bin/console {toxinidir}/misc/copylxml.py {envtmpdir}
 	python {toxinidir}/pyhwp-xunits/setup.py develop
-	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf
+	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf --with-xunit
 	hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures
         {toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir=. --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
 changedir={envtmpdir}
@@ -20,7 +20,7 @@ deps=nose
 commands =
 	jython -c 'from org.apache.poi.poifs.filesystem import POIFSFileSystem'
 	jython {toxinidir}/pyhwp-xunits/setup.py develop
-	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf
+	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf --with-xunit
 	hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures
         {toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir=. --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
 
