--- a/tox.ini.in
+++ b/tox.ini.in
@@ -7,7 +7,7 @@ envlist = py25,py26,py27,jy25,lo
 deps=nose
 commands=
 	{toxinidir}/bin/console {toxinidir}/misc/copylxml.py {envtmpdir}
-	python {toxinidir}/pyhwp-xunits/setup.py develop
+	{envpython} {toxinidir}/pyhwp-xunits/setup.py develop
 	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf --with-xunit
 	hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures
         {toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir=. --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
@@ -16,10 +16,9 @@ changedir={envtmpdir}
 [testenv:jy25]
 setenv=JYTHONPATH=${java-poi:location}/poi-3.8-20120326.jar
 basepython=${jython25:executable}
-deps=nose
 commands =
-	jython -c 'from org.apache.poi.poifs.filesystem import POIFSFileSystem'
-	jython {toxinidir}/pyhwp-xunits/setup.py develop
+	{envpython} -c 'from org.apache.poi.poifs.filesystem import POIFSFileSystem'
+	{envpython} {toxinidir}/pyhwp-xunits/setup.py develop
 	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf --with-xunit
 	hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures
         {toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir=. --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
@@ -29,6 +28,6 @@ setenv=PATH={env:PATH}${lo:pathsep}${lo:program}${lo:pathsep}${lo:ure}/bin
        PYTHONPATH=${lo:uno_pythonpath}
 basepython=${lo:uno_python}
 commands=
-	python -c 'import uno, unohelper'
+	{envpython} -c 'import uno, unohelper'
 	{toxinidir}/bin/oxt-test {envtmpdir}
 deps=discover
