--- a/tox.ini.in
+++ b/tox.ini.in
@@ -5,23 +5,29 @@ envlist = py25,py26,py27,jy25,lo
 
 [testenv]
 deps=nose
+     coverage
 commands=
+	{envpython} {toxinidir}/misc/mkdir.py {envtmpdir}
 	{toxinidir}/bin/console {toxinidir}/misc/copylxml.py {envtmpdir}
 	{envpython} {toxinidir}/pyhwp-xunits/setup.py develop
-	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf --with-xunit
-	hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures
-        {toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir=. --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
-changedir={envtmpdir}
+	nosetests -v -w {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf --with-xunit --xunit-file={envtmpdir}/nosetests.xml --with-coverage --cover-package={toxinidir} --cover-erase --cover-xml --cover-xml-file={envtmpdir}/coverage.xml
+	hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures --out-dir={envtmpdir}
+        {toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir={envtmpdir} --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
 
 [testenv:jy25]
 setenv=JYTHONPATH=${java-poi:location}/poi-3.8-20120326.jar
 basepython=${jython25:executable}
 commands =
+	{envpython} {toxinidir}/misc/mkdir.py {envtmpdir}
 	{envpython} -c 'from org.apache.poi.poifs.filesystem import POIFSFileSystem'
 	{envpython} {toxinidir}/pyhwp-xunits/setup.py develop
-	nosetests {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf --with-xunit
-	hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures
-        {toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir=. --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
+        {toxinidir}/bin/coverage erase
+	{envbindir}/coverage run --source={toxinidir} --omit='parts/*',setup.py,bootstrap.py,versioneer.py {envbindir}/nosetests -v -w {envtmpdir} {toxinidir}/pyhwp --logging-config={toxinidir}/logging-nosetests.conf --with-xunit --xunit-file={envtmpdir}/nosetests.xml
+        {toxinidir}/bin/coverage combine
+        {toxinidir}/bin/coverage report
+        {toxinidir}/bin/coverage xml -i -o {envtmpdir}/coverage.xml
+	hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures --out-dir={envtmpdir}
+        {toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir={envtmpdir} --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
 
 [testenv:lo]
 setenv=PATH={env:PATH}${lo:pathsep}${lo:program}${lo:pathsep}${lo:ure}/bin
@@ -30,9 +36,13 @@ setenv=PATH={env:PATH}${lo:pathsep}${lo:program}${lo:pathsep}${lo:ure}/bin
        PYHWP_PLAT_UNO=1
 basepython=${lo:uno_python}
 commands=
+	{envpython} {toxinidir}/misc/mkdir.py {envtmpdir}
 	{envpython} {toxinidir}/unokit/setup.py develop
 	{envpython} {toxinidir}/oxt.tool/setup.py develop
 	{envpython} {toxinidir}/pyhwp-xunits/setup.py develop
-	run-in-lo {envbindir}/nosetests {envtmpdir} {toxinidir}/pyhwp {toxinidir}/unokit {toxinidir}/pyhwp_uno --logging-conf={toxinidir}/logging-nosetests.conf --with-xunit
-	run-in-lo {envbindir}/hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures
-	{toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir=. --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
+	run-in-lo {envbindir}/nosetests -v -w {envtmpdir} {toxinidir}/pyhwp {toxinidir}/unokit {toxinidir}/pyhwp_uno --logging-conf={toxinidir}/logging-nosetests.conf --with-xunit --xunit-file={envtmpdir}/nosetests.xml --with-coverage --cover-package={toxinidir} --cover-erase
+        {toxinidir}/bin/coverage combine
+        {toxinidir}/bin/coverage report
+        {toxinidir}/bin/coverage xml -i -o {envtmpdir}/coverage.xml --omit='/usr/*','parts/*'
+	run-in-lo {envbindir}/hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures --out-dir={envtmpdir}
+	{toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir={envtmpdir} --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
