buildout: discover.python (see #102)
- System python installations
- pythonz (https://github.com/saghul/pythonz)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ develop = .
           unokit
           oxt.tool
           pyhwp_uno
+          discover.python
           discover.jre
           discover.lo
           install.jython
@@ -20,6 +21,9 @@ parts = pyhwp
 	test-cli
 	test-sdist
 	test-xunits
+	python27
+	python26
+	python25
 	jython25
 	java-poi
         xunit
@@ -99,6 +103,18 @@ mode = 755
 [test-xunits]
 recipe = zc.recipe.egg
 eggs = pyhwp-xunits
+
+[python27]
+recipe = discover.python
+version = 2.7
+
+[python26]
+recipe = discover.python
+version = 2.6
+
+[python25]
+recipe = discover.python
+version = 2.5
 
 [jre]
 recipe = discover.jre
