buildout: discover.lxml (close #102)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ develop = .
           oxt.tool
           pyhwp_uno
           discover.python
+          discover.lxml
           discover.jre
           discover.lo
           install.jython
@@ -21,9 +22,9 @@ parts = pyhwp
 	test-cli
 	test-sdist
 	test-xunits
-	python27
-	python26
-	python25
+	python27-lxml
+	python26-lxml
+	python25-lxml
 	jython25
 	java-poi
         xunit
@@ -115,6 +116,18 @@ version = 2.6
 [python25]
 recipe = discover.python
 version = 2.5
+
+[python27-lxml]
+recipe = discover.lxml
+python=${python27:executable}
+
+[python26-lxml]
+recipe = discover.lxml
+python=${python26:executable}
+
+[python25-lxml]
+recipe = discover.lxml
+python=${python25:executable}
 
 [jre]
 recipe = discover.jre
