--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,9 +22,9 @@ parts = pyhwp
 	test-cli
 	test-sdist
 	test-xunits
-	python27-lxml
-	python26-lxml
-	python25-lxml
+	install-lxml-py25
+	install-lxml-py26
+	install-lxml-py27
 	jython25
 	java-poi
         xunit
@@ -128,6 +128,24 @@ python=${python26:executable}
 [python25-lxml]
 recipe = discover.lxml
 python=${python25:executable}
+
+[install-lxml-py25]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/install-lxml.py.in
+output = ${buildout:directory}/bin/install-lxml-py25.py
+lxml-location=${python25-lxml:location}
+
+[install-lxml-py26]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/install-lxml.py.in
+output = ${buildout:directory}/bin/install-lxml-py26.py
+lxml-location=${python26-lxml:location}
+
+[install-lxml-py27]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/install-lxml.py.in
+output = ${buildout:directory}/bin/install-lxml-py27.py
+lxml-location=${python27-lxml:location}
 
 [jre]
 recipe = discover.jre
